--- a/css/main1.css
+++ b/css/main1.css
@@ -1,17 +1,21 @@
 body
 {
-	/*width: 964px;*/
-	background-color: silver;
-	/*margin: 15px auto;*/
+	background-color: silver;	
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 87.5%;
-	/*border: 1px solid black;*/
+	font-size: 87.5%;	
 }
 
 article, aside, figure, footer, header, nav, section
 {
 	display: block;
 }
+
+h3
+{
+	font-size: 70%;
+	margin-top: 50px;
+}
+
 
 #pageContainer
 {
@@ -35,23 +39,20 @@ article, aside, figure, footer, header, nav, section
 {
 	width: 180px;
 	height: 600px;
-	float: left;
-	/*background-color: white;*/
-	margin-top: 10px;
-	/*border-right: 2px solid #ef9c00;*/
+	float: left;	
+	margin-top: 10px;	
 	border: 1px solid #D4D4D4;
 }
 
 #leftside img
 {
-	width: 180px;
-	
+	width: 180px;	
 	border: 1px solid #D4D4D4;
 }
 
 section
 {
-	/*background-color:white;*/
+	
 	width: 600px;
 	height: 600px;
 	float: left;
@@ -69,22 +70,19 @@ h1
 }
 
 #rightside
-{
-	/*background-color: white;*/
+{	
 	width: 180px;
 	height: 600px;
 	float: right;
 	margin-top: 10px;
-	border: 1px solid #D4D4D4;
-	/*border-left: 2px solid #ef9c00;*/
+	border: 1px solid #D4D4D4;	
 }
 
 #rightside p
 {
 	text-align: left;
-	
+	margin-top: 200px;
 }
-
 #audioplayer
 {
 	width: 180px;
