--- a/css/main-index.css
+++ b/css/main-index.css
@@ -1,7 +1,7 @@
 body
 {	
 	background-image: url(../images/paranormal4_bg.jpg);		
-	font-family: Arial, Helvetica, sans-serif;	
+	font-family: 'Alef', Arial, Helvetica, sans-serif;	
 }
 
 article, aside, figure, footer, header, nav, section
