--- a/css/main1.css
+++ b/css/main1.css
@@ -1,9 +1,32 @@
 body
-{
-	background-color: silver;	
+{	
 	font-family: 'Alef', Arial, Helvetica, sans-serif;	
-	font-size: 87.5%;	
+	font-size: 87.5%;
+	background: linear-gradient(to bottom, #ffffff 0%,#f1f1f1 50%,#e1e1e1 51%,#f6f6f6 100%);
 }
+
+/*#radial-center {
+  /* fallback 
+  background-color: #2F2727;
+  background-image: url(images/radial_bg.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+
+  /* Safari 4-5, Chrome 1-9 */
+  /* Can't specify a percentage size? Laaaaaame. 
+  background: -webkit-gradient(radial, center center, 0, center center, 460, from(#1a82f7), to(#2F2727));
+
+  /* Safari 5.1+, Chrome 10+ 
+  background: -webkit-radial-gradient(circle, #1a82f7, #2F2727);
+
+  /* Firefox 3.6+ 
+  background: -moz-radial-gradient(circle, #1a82f7, #2F2727);
+
+  /* IE 10 
+  background: -ms-radial-gradient(circle, #1a82f7, #2F2727);
+
+  /* Opera couldn't do radial gradients, then at some point they started supporting the -webkit- syntax, how it kinda does but it's kinda broken (doesn't do sizing) 
+}*/
 
 article, aside, figure, footer, header, nav, section
 {
